syntax = "proto3";

option java_multiple_files = true;
option java_package = "harisbrulicita2024";
option java_outer_classname = "UserProto";

package harisbrulicita2024;


service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc ListUsers(ListUserRequest) returns (ListUserResponse);
}

message CreateUserRequest {
  int32 id = 1;
  string name = 2;
  string surname = 3;
  string email = 4;
  string password = 5;
  // ISO 8601 format datuma: YYYY-MM-DD
  string birthdate = 6;
}

message GetUserRequest {
  int32 id = 1;
}

message UpdateUserRequest {
  int32 id = 1;
  string name = 2;
  string surname = 3;
  string email = 4;
  string password = 5;
  string birthdate = 6;
}

message DeleteUserRequest {
  int32 id = 1;
}

message ListUserRequest {
  optional string name = 1;
  optional string surname = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message UserResponse {
  int32 id = 1;
  string name = 2;
  string surname = 3;
  string email = 4;
  string password = 5;
  string birthdate = 6;
}

message DeleteUserResponse {
  bool success = 1;
}

message ListUserResponse {
  repeated UserResponse users = 1;
  int32 current_page = 2;
  int32 total_pages = 3;
}
